fixed overlap in tag list

--- a/app/assets/stylesheets/page.css.sass
+++ b/app/assets/stylesheets/page.css.sass
@@ -101,7 +101,7 @@ ul.tags.hate_list, ul.tags.like_list
     padding: 2px 5px
     margin-right: 4px
     border-radius: 3px 3px
-    
+    line-height: 1.8
     a
       background: none
       border: none
